[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Font/alte-haas-grotesk/AlteHaasGroteskBold.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 33
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.482353, 0.156863, 0.101961, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.87451, 0.258824, 0.32549, 1 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.568627, 0.192157, 0.129412, 1 )

[sub_resource type="DynamicFont" id=6]
size = 42
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="Player" type="KinematicBody2D" groups=["Net", "Player"]]
z_index = 7
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="NetworkTickRate" type="Timer" parent="."]
wait_time = 0.03
autostart = true

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="VoteButton" type="Button" parent="."]
visible = false
margin_left = 532.0
margin_right = 686.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Vote"

[node name="VoterLabel" type="Label" parent="."]
visible = false
anchor_right = 1.0
margin_left = 532.0
margin_top = 100.0
margin_right = 686.0
margin_bottom = 151.0
rect_min_size = Vector2( 0, 51 )
custom_colors/font_color = Color( 0.231373, 0.101961, 0.0823529, 1 )
custom_fonts/font = SubResource( 6 )
text = "null"
align = 1

[connection signal="timeout" from="NetworkTickRate" to="." method="_on_NetworkTickRate_timeout"]
[connection signal="pressed" from="VoteButton" to="." method="_on_VoteButton_pressed"]
